--- a/src/styles-projects.css
+++ b/src/styles-projects.css
@@ -1,13 +1,41 @@
 .heading-projects {
     font-size: 5vw;
+    color: #4b0082;
 }
 
 .project-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+
     background-color: #fde100;
+    padding: 1rem;
+    width: 50%;
+
+    border-radius: 10px;
+}
+
+.project-card-heading {
+    color: black;
 }
 
 .button-container {
-    text-align: center;
+    display: flex;
+    gap: 1rem;
+}
+
+.visit-button, .delete-button {
+    padding: 0.75rem 1.5rem;
+    border: none;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: #6F4E37;
+}
+
+.svg-icon {
+    fill: white;
 }
 
 .projects-content {
