--- a/src/styles-projects.css
+++ b/src/styles-projects.css
@@ -25,13 +25,18 @@
     gap: 1rem;
 }
 
-.visit-button, .delete-button {
+.visit-button, .delete-button, .add-new-project {
     padding: 0.75rem 1.5rem;
     border: none;
     color: white;
     cursor: pointer;
     border-radius: 5px;
     background-color: #6F4E37;
+}
+
+.add-new-project {
+    padding: 1.5rem 3rem;
+    font-size: 1vw;
 }
 
 .svg-icon {
