Change font family of adding projects button

--- a/src/styles-projects.css
+++ b/src/styles-projects.css
@@ -37,6 +37,7 @@
 .add-new-project {
     padding: 1.5rem 3rem;
     font-size: 1vw;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .svg-icon {
