--- a/src/styles-modal.css
+++ b/src/styles-modal.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
 
     position: fixed;
     width: 45ch;
@@ -19,7 +19,41 @@
     border-radius: 8px;
 }
 
+label {
+    display: block;
+    font-weight: bold;
+}
+
 .modal button {
     cursor: pointer;
+    padding: 0.25rem;
+    border: none;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+}
+
+#todo-description {
+    width: 100%;
+}
+
+.add-todo-modal-form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 80%;
+}
+
+.description-container {
+    width: 100%;
+}
+
+input, textarea {
+    padding: 0.25rem;
+}
+
+.modal .add-new-todo-btn {
+    background-color: #4169E1;
 }
 
