Style edit and delete buttons from todo cards

--- a/src/styles-individual-projects.css
+++ b/src/styles-individual-projects.css
@@ -14,3 +14,15 @@
 .individual-project-heading {
     color: #72ECFA;
 }
+
+.todo-card-button-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.todo-delete-button, .todo-edit-button {
+    padding: 0.25rem 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
