--- a/src/styles-modal.css
+++ b/src/styles-modal.css
@@ -38,7 +38,7 @@ label {
     width: 100%;
 }
 
-.add-todo-modal-form {
+.add-todo-modal-form, .edit-todo-modal-form {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -53,7 +53,11 @@ input, textarea {
     padding: 0.25rem;
 }
 
-.modal .add-new-todo-btn {
+.modal .add-new-todo-btn, .modal .edit-current-todo-btn {
     background-color: #4169E1;
 }
 
+#edit-todo-modal .edit-modal-close-btn {
+    background-color: red;
+    padding: 0.25rem 0.5rem;
+}
